--- a/dbflow/build.gradle
+++ b/dbflow/build.gradle
@@ -1,15 +1,13 @@
 apply plugin: 'com.android.library'
 
-project.ext.artifactId = bt_name
-
 android {
-    compileSdkVersion Integer.valueOf(dbflow_target_sdk)
-    buildToolsVersion dbflow_build_tools_version
+    compileSdkVersion rootProject.ext.compileSdkVersion
+    buildToolsVersion rootProject.ext.buildToolsVersion
 
     defaultConfig {
-        minSdkVersion dbflow_min_sdk
-        targetSdkVersion Integer.valueOf(dbflow_target_sdk)
-        versionCode = version_code
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion
+        versionCode = 1
     }
 
     lintOptions {
@@ -17,15 +15,12 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_7
-        targetCompatibility JavaVersion.VERSION_1_7
+        sourceCompatibility rootProject.ext.sourceCompatibility
+        targetCompatibility rootProject.ext.targetCompatibility
     }
-
 }
 
 dependencies {
-    api project("${dbflow_project_prefix}dbflow-core")
-    api "com.android.support:support-annotations:26.0.1"
+    api project(":dbflow-core")
+    api "com.android.support:support-annotations:${rootProject.ext.supportLibsVersion}"
 }
-
-apply from: '../android-artifacts.gradle'
